# pakemon-demos

./: .gitignore  README.md
bevy/: Cargo.toml  README.md
bevy/src/: main.rs
deno/: pakemon.ts
deno-ray/: .gitignore  README.md  main.ts  raylib.ts
deno-sdl2/: .gitignore  Makefile  types.ts
deno/states/: intro.ts
dome/src/: main.wren
haxe/: .gitignore  Makefile  Project.xml  README.md
haxe/server/: client.js  package-lock.json  package.json  server.js
haxe/src/: Cat.hx  Main.hx  StateIntro.hx  StateNetTest.hx
html5-canvas/: README.md  index.html  package.json
html5-canvas/src/: animation.js  loader.js  utils.js
love/: .gitignore  README.md  template.html
nelua-raylib/: main.nelua  raylib.nelua
nelua-raylib/scenes/: intro.nelua
nim-ray/: .gitignore  README.md  pakemon.nimble
nim-ray/src/: pakemon.nim
nim-raylib-forevor/: .gitignore  README.md
nim-raylib-forevor/src/: pakemon.nim
node-raylib/: ParallaxLayer.js  README.md  package-lock.json  package.json  pakemon.js
node-raylib/lib/: ParallaxLayer.js  SpriteAnimation.js  input.js
node-raylib/scenes/: scene_intro.js  (+1 more)
py-kivy/: README.md  main.py  requirements.txt
pyckitup/: README.md
pygame/: .gitignore  Makefile  README.md  main.py  pakemon.py  requirements.txt
raylib/: .gitignore  CMakeLists.txt  README.md
raylib-rs/: Cargo.toml
raylib/src/: main.c  pakemon.h
raylib/src/scenes/: scene_intro.h
sdl/: .gitignore  Makefile  README.md  SDL2Test.cpp  main.cpp
wasm4/: .gitignore  README.md  asconfig.json  package-lock.json  package.json
zig-raylib/: README.md  build.zig
(+16 files in other folders)
